// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  data-bootstrap-override="clickable-style-link"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Destructive story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> DestructiveLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> FullWidth story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand clickable-style--full-width"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleIconOnly story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleIconOnlySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleLeftIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleRightIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--error"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconSuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--success"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--warning"
  data-bootstrap-override="clickable-style-icon"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> LinkInParagraphContext story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet,
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    data-bootstrap-override="clickable-style-link"
    href="https://go.czi.team/eds"
  >
    consectetur adipiscing elit
  </a>
  . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    data-bootstrap-override="clickable-style-link"
    href="https://go.czi.team/eds"
  >
    Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
  </a>
   
  Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    data-bootstrap-override="clickable-style-link"
    href="https://go.czi.team/eds"
  >
    vel pulvinar
  </a>
   euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
</div>
`;

exports[`<Link /> LinkNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--neutral link--link"
  data-bootstrap-override="clickable-style-link"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> LinkRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  data-bootstrap-override="clickable-style-link"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      opens in a new tab
    </title>
    <path
      d="M3 21V3H12V5H5V19H19V12H21V21H3ZM9.7 15.7L8.3 14.3L17.6 5H14V3H21V10H19V6.4L9.7 15.7Z"
    />
  </svg>
</a>
`;

exports[`<Link /> Primary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> PrimaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> PrimaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--primary clickable-style--brand"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> PrimaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> PrimarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--primary clickable-style--brand"
  data-bootstrap-override="clickable-style-primary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Secondary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--error"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> SecondaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> SecondarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--brand"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondarySuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--success"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--warning"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Tertiary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> TertiaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L4 12L12 4L13.425 5.4L7.825 11H20V13H7.825L13.425 18.6L12 20Z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> TertiaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--neutral"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> TertiaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 20L10.575 18.6L16.175 13H4V11H16.175L10.575 5.4L12 4L20 12L12 20Z"
    />
  </svg>
</a>
`;

exports[`<Link /> TertiarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--neutral"
  data-bootstrap-override="clickable-style-secondary"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link exampleClassName"
  data-bootstrap-override="clickable-style-link"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  data-bootstrap-override="clickable-style-link"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
